--- a/taskfiles/Taskfile-git.yml.handlebars
+++ b/taskfiles/Taskfile-git.yml.handlebars
@@ -181,9 +181,9 @@ tasks:
             -f "url=https://\{{.GITHUB_USER}}:$GITHUB_TOKEN@github.com/\{{.GITHUB_ORG}}/\{{.GITHUB_SLUG}}.git" \
             -f 'enabled=true'
         fi
-      - curl -H 'Content-Type: application/json' -H "Authorization: Bearer $GITLAB_TOKEN" -XPUT --data \
-          "{\"mirror\": true, \"import_url\": \"https://\{{.GITHUB_USER}}:$GITHUB_TOKEN@github.com/\{{.GITHUB_ORG}}/\{{.GITHUB_SLUG}}.git\"}" \
-          "https://gitlab.com/api/v4/projects/\{{.GITLAB_REPO_ID}}"
+      - curl -H 'Content-Type: application/json' -H "Authorization: Bearer $GITLAB_TOKEN" -XPUT --data
+          "{'mirror': true, 'import_url': 'https://\{{.GITHUB_USER}}:$GITHUB_TOKEN@github.com/\{{.GITHUB_ORG}}/\{{.GITHUB_SLUG}}.git'}"
+          'https://gitlab.com/api/v4/projects/\{{.GITLAB_REPO_ID}}'
     sources:
       - package.json
     preconditions:
