--- a/.start.sh.handlebars
+++ b/.start.sh.handlebars
@@ -11,6 +11,7 @@
 
 set -e
 export REPO_TYPE={{group}}
+export REPO_SUBTYPE="Populated by GitLab CI"
 
 if [ -d .git ]; then
   git pull origin master --ff-only
