--- a/.start.sh.handlebars
+++ b/.start.sh.handlebars
@@ -9,7 +9,8 @@
 #   script calls the script in `.common/update.sh` which will make sure the project is
 #   bootstrapped. `bash .start.sh` is the first command you should run when working with this project.
 
-set -e
+set -eo pipefail
+
 export REPO_TYPE={{group}}
 export REPO_SUBTYPE="Populated by GitLab CI"
 
