--- a/package.json.handlebars
+++ b/package.json.handlebars
@@ -38,7 +38,10 @@
     "cz-conventional-changelog": "^3.3.0",
     "inquirer": "^8.1.2",
     "prettier-plugin-sh": "^0.7.1",
+    "remark-cli": "10.0.0",
+    "remark-lint": "9.0.1",
     "remark-preset-lint-recommended": "^6.0.1",
+    "remark-torchlight": "0.0.2",
     "signale": "^1.4.0"
   },
   "engines": {
