Update scripts/software.sh, .start.sh.handlebars, package.json.handlebars, taskfiles/Taskfile-install.yml files

--- a/package.json.handlebars
+++ b/package.json.handlebars
@@ -41,8 +41,7 @@
     "remark-cli": "10.0.0",
     "remark-lint": "9.0.1",
     "remark-preset-lint-recommended": "^6.0.1",
-    "remark-torchlight": "0.0.2",
-    "signale": "^1.4.0"
+    "remark-torchlight": "0.0.2"
   },
   "engines": {
     "node": ">=10"
