--- a/.start.sh.handlebars
+++ b/.start.sh.handlebars
@@ -87,6 +87,6 @@ fi
 
 cp ".common/files-$REPO_SUBTYPE/Taskfile.yml" Taskfile.yml
 
-task common:update:all
+task start
 
 cp ".common/files-$REPO_SUBTYPE/.start.sh" .start.sh &
