--- a/package.json.handlebars
+++ b/package.json.handlebars
@@ -104,8 +104,7 @@
     "**/*.yml": [
       "check-yaml",
       "yamllint -s",
-      "task fix:yaml:dashes --",
-      "task fix:yaml:order --",
+      "task fix:yaml --",
       "prettier --write"
     ],
     "logo.png": [
