Update taskfiles/npm/Taskfile.yml, taskfiles/npm/Taskfile-build.yml, taskfiles/npm/Taskfile-cov.yml, Taskfile.yml.handlebars, taskfiles/npm/Taskfile-test.yml, .eslintrc.cjs, taskfiles/Taskfile-lint.yml, taskfiles/Taskfile-fix.yml, taskfiles/Taskfile-install.yml, package.json.handlebars, .vscode/settings.json Deleted taskfiles/Taskfile-npm.yml

--- a/Taskfile.yml.handlebars
+++ b/Taskfile.yml.handlebars
@@ -19,7 +19,10 @@ includes:
   image: ./.common/taskfiles/Taskfile-image.yml
   install: ./.common/taskfiles/Taskfile-install.yml
   lint: ./.common/taskfiles/Taskfile-lint.yml
-  npm: ./.common/taskfiles/Taskfile-npm.yml
+  npm: ./.common/taskfiles/npm/Taskfile.yml
+  npm:build: ./.common/taskfiles/npm/Taskfile-build.yml
+  npm:cov: ./.common/taskfiles/npm/Taskfile-cov.yml
+  npm:test: ./.common/taskfiles/npm/Taskfile-test.yml
   packer: ./.common/taskfiles/Taskfile-packer.yml
   python: ./.common/taskfiles/Taskfile-python.yml
   security: ./.common/taskfiles/Taskfile-security.yml
