--- a/package.json.handlebars
+++ b/package.json.handlebars
@@ -36,17 +36,14 @@
     "@commitlint/config-conventional": "^13.1.0",
     "@megabytelabs/prettier-config": "^14.14.14",
     "cz-conventional-changelog": "^3.3.0",
-    "eslint": "^7.32.0",
-    "eslint-config-prettier": "8.3.0",
-    "eslint-formatter-pretty": "^4.1.0",
-    "eslint-plugin-editorconfig": "^3.0.2",
-    "eslint-plugin-eslint-comments": "^3.2.0",
-    "eslint-plugin-jsonc": "^1.6.0",
-    "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-yml": "0.10.1"
+    "eslint": "^8.1.0",
+    "esprint": "^3.1.0"
   },
   "engines": {
     "node": ">=10"
+  },
+  "eslintConfig": {
+    "extends": "@megabytelabs/eslint-config"
   },
   "funding": [
     {
