--- a/package.json.handlebars
+++ b/package.json.handlebars
@@ -36,9 +36,7 @@
     "@commitlint/config-conventional": "^13.1.0",
     "@megabytelabs/eslint-config": "^1.0.0",
     "@megabytelabs/prettier-config": "^14.14.14",
-    "cz-conventional-changelog": "^3.3.0",
-    "eslint": "^8.1.0",
-    "esprint": "^3.1.0"
+    "cz-conventional-changelog": "^3.3.0"
   },
   "engines": {
     "node": ">=10"
