--- a/Taskfile.yml.handlebars
+++ b/Taskfile.yml.handlebars
@@ -22,7 +22,7 @@ includes:
   npm: ./.common/taskfiles/npm/Taskfile.yml
   npm:build: ./.common/taskfiles/npm/Taskfile-build.yml
   npm:cov: ./.common/taskfiles/npm/Taskfile-cov.yml
-  npm:test: ./.common/taskfiles/npm/Taskfile-test.yml
+  npm:doc: ./.common/taskfiles/npm/Taskfile-doc.yml
   packer: ./.common/taskfiles/Taskfile-packer.yml
   python: ./.common/taskfiles/Taskfile-python.yml
   security: ./.common/taskfiles/Taskfile-security.yml
