--- a/package.json.handlebars
+++ b/package.json.handlebars
@@ -15,16 +15,10 @@
   },
   "version": "0.0.1",
   "scripts": {
-    "clean": "task common:clean",
-    "commit": "task common:commit",
-    "info": "task --list",
+    "help": "task --list",
+    "preinstall": "npx -y only-allow-pnpm",
     "prepare": "task common:husky",
-    "prepare-release": "task common:prepare-release",
-    "requirements": "task common:requirements",
-    "reset": "task common:reset",
-    "reset-force": "task common:reset-force",
-    "prepare-release": "task common:prepare-release",
-    "update": "task common:update"
+    "start": "bash .start.sh"
   },
   "config": {
     "commitizen": {
