--- a/common/package.json.handlebars
+++ b/common/package.json.handlebars
@@ -29,6 +29,7 @@
     "tslib": "^2.3.1"
   },
   "devDependencies": {
+    "@budibase/handlebars-helpers": "^0.11.7",
     "@commitlint/config-conventional": "^13.1.0",
     "@megabytelabs/eslint-config": "^1.0.0",
     "@megabytelabs/jest-preset": "^1.0.0",
