--- a/common/Taskfile.yml.handlebars
+++ b/common/Taskfile.yml.handlebars
@@ -8,25 +8,33 @@ vars:
   REPOSITORY_TYPE: {{group}}
 
 includes:
-  ansible: ./.common/taskfiles/ansible/Taskfile.yml
-  ansible:ansibler: ./.common/taskfiles/ansible/Taskfile-ansibler.yml
-  ansible:test: ./.common/taskfiles/ansible/Taskfile-test.yml
-  common: ./.common/taskfiles/common/Taskfile.yml
-  common:update: ./.common/taskfiles/common/Taskfile-update.yml
-  docker: ./.common/taskfiles/Taskfile-docker.yml
-  fix: ./.common/taskfiles/Taskfile-fix.yml
-  git: ./.common/taskfiles/Taskfile-git.yml
-  image: ./.common/taskfiles/Taskfile-image.yml
-  install: ./.common/taskfiles/Taskfile-install.yml
-  lint: ./.common/taskfiles/Taskfile-lint.yml
-  npm: ./.common/taskfiles/npm/Taskfile.yml
-  npm:build: ./.common/taskfiles/npm/Taskfile-build.yml
-  npm:cov: ./.common/taskfiles/npm/Taskfile-cov.yml
-  npm:doc: ./.common/taskfiles/npm/Taskfile-doc.yml
-  packer: ./.common/taskfiles/Taskfile-packer.yml
-  python: ./.common/taskfiles/Taskfile-python.yml
-  security: ./.common/taskfiles/Taskfile-security.yml
-  vscode: ./.common/taskfiles/Taskfile-vscode.yml
+  ansible: ./.config/taskfiles/ansible/Taskfile.yml
+  ansible:ansibler: ./.config/taskfiles/ansible/Taskfile-ansibler.yml
+  ansible:test: ./.config/taskfiles/ansible/Taskfile-test.yml
+  common: ./.config/taskfiles/common/Taskfile.yml
+  common:code: ./.config/taskfiles/common/Taskfile-code.yml
+  common:update: ./.config/taskfiles/common/Taskfile-update.yml
+  docker: ./.config/taskfiles/Taskfile-docker.yml
+  fix: ./.config/taskfiles/Taskfile-fix.yml
+  git: ./.config/taskfiles/Taskfile-git.yml
+  image: ./.config/taskfiles/Taskfile-image.yml
+  install: ./.config/taskfiles/Taskfile-install.yml
+  lint: ./.config/taskfiles/lint/Taskfile.yml
+  lint:esprint: ./.config/taskfiles/lint/Taskfile-esprint.yml
+  lint:markdown: ./.config/taskfiles/lint/Taskfile-markdown.yml
+  lint:prose: ./.config/taskfiles/lint/Taskfile-prose.yml
+  nest: ./.config/taskfiles/nest/Taskfile.yml
+  npm: ./.config/taskfiles/npm/Taskfile.yml
+  npm:cov: ./.config/taskfiles/npm/Taskfile-cov.yml
+  npm:doc: ./.config/taskfiles/npm/Taskfile-doc.yml
+  packer: ./.config/taskfiles/Taskfile-packer.yml
+  python: ./.config/taskfiles/Taskfile-python.yml
+  security: ./.config/taskfiles/Taskfile-security.yml
+  upstream: ./.config/taskfiles/upstream/Taskfile.yml
+  upstream:common: ./.config/taskfiles/upstream/Taskfile-common.yml
+  upstream:docs: ./.config/taskfiles/upstream/Taskfile-docs.yml
+  upstream:project: ./.config/taskfiles/upstream/Taskfile-project.yml
+  vscode: ./.config/taskfiles/Taskfile-vscode.yml
 
 tasks:
   donothing: 'true'
