--- a/common/package.json.handlebars
+++ b/common/package.json.handlebars
@@ -1,4 +1,8 @@
 {
+  "private": false,
+  "publishConfig": {
+    "access": "public"
+  },
   "name": "{{#if customPackageName}}{{customPackageName}}{{else}}@{{profile.npmjs_organization}}/{{repository.prefix.github}}{{slug}}{{/if}}",
   "description": "{{description}}",
   "license": "{{license}}",
