--- a/common/package.json.handlebars
+++ b/common/package.json.handlebars
@@ -21,7 +21,7 @@
   "scripts": {
     "help": "task --list",
     "prepare": "task common:husky",
-    "start": "bash .start.sh"
+    "start": "bash .config/start.sh"
   },
   "blueprint": {
     "description": "An NPM package that is part of the Megabyte Labs eco-system",
