--- a/common/Taskfile.yml.handlebars
+++ b/common/Taskfile.yml.handlebars
@@ -6,8 +6,8 @@ output: interleaved
 vars:
   GITHUB_ORG: ProfessorManhattan
   GITHUB_USER: ProfessorManhattan
-  NPM_PROGRAM: pnpm
-  NPX_PACKAGE: pnpx
+  NPM_PROGRAM: npm
+  NPX_PACKAGE: npx
   REPOSITORY_SUBTYPE: {{subgroup}}
   REPOSITORY_TYPE: {{group}}
   TIMEZONE: America/New_York
