--- a/common/Taskfile.yml.handlebars
+++ b/common/Taskfile.yml.handlebars
@@ -4,22 +4,26 @@ version: '3'
 output: interleaved
 
 vars:
-{{#eq subgroup 'role'}}
+{{#eq group 'ansible'}}{{#eq subgroup 'role'}}
   GALAXY_NAMESPACE:
     sh: if [ -f meta/main.yml ]; then yq e '.galaxy_info.namespace' meta/main.yml; else jq -r '.name' package.json | sed 's/\/.*//' | sed 's/@//'; fi
   GALAXY_ROLE_NAME:
     sh: if [ -f meta/main.yml ]; then yq e '.galaxy_info.role_name' meta/main.yml; else jq -r '.name' package.json | sed 's/.*\///'; fi
-{{/eq}}
+{{/eq}}{{/eq}}
   GITHUB_ORG: ProfessorManhattan
   GITHUB_USER: ProfessorManhattan
+  IGNORE_FOLDERS: -name .autodoc -o -name .cache -o -name .common -o -name .git -o -name .husky
+    -o -name .modules -o -name .npm -o -name .shared -o -name .task -o -name .venv -o -name .vscode -o -name node_modules
+    -o -name venv -o -path './.common*'
   NPM_PROGRAM: npm
+  NPX_HANDLE: ''
   NPX_PACKAGE: npx
   REPOSITORY_SUBTYPE: {{subgroup}}
   REPOSITORY_TYPE: {{group}}
   TIMEZONE: America/New_York
 
 includes:
-{{#each (glob './.config/taskfiles/**/*.yml')}}
+{{#each (taskfileSort (glob './.config/taskfiles/**/*.yml'))}}
   {{remove (remove (remove (replace (remove this "./.config/taskfiles/") "/Taskfile-" ":") "/Taskfile.yml") "Taskfile-") ".yml"}}: {{this}}
 {{/each}}
 
@@ -37,4 +41,4 @@ tasks:
       **Example usage:**
       `task start`
     cmds:
-      - task: {{#eq group "common"}}upstream:common{{else}}common:update:update{{/eq}}
+      - task: {{#eq group "common"}}upstream:{{#eq subgroup "shared"}}shared{{else}}common{{/eq}}{{else}}common:update:update{{/eq}}
