Update common/.config/taskfiles/upstream/Taskfile-commondocs.yml, common/.config/taskfiles/upstream/Taskfile.yml, common/.config/taskfiles/common/Taskfile.yml, common/.config/taskfiles/common/Taskfile-update.yml, common/.config/taskfiles/upstream/Taskfile-project.yml, common/.config/taskfiles/lint/Taskfile-prose.yml, common/.config/taskfiles/lint/Taskfile.yml, common/.config/flake8.toml, common/Taskfile.yml.handlebars Deleted common/.gitlab/ci/update/docs.gitlab-ci.yml, common/.gitlab/ci/update/shared.gitlab-ci.yml

--- a/common/Taskfile.yml.handlebars
+++ b/common/Taskfile.yml.handlebars
@@ -12,9 +12,9 @@ vars:
 {{/eq}}{{/eq}}
   GITHUB_ORG: ProfessorManhattan
   GITHUB_USER: ProfessorManhattan
-  IGNORE_FOLDERS: -name .autodoc -o -name .cache -o -name .common -o -name .git -o -name .husky
-    -o -name .modules -o -name .npm -o -name .pnpm-store -o -name .shared -o -name .task -o -name .venv
-    -o -name .vscode -o -name node_modules -o -name venv -o -path './.common*'
+  IGNORE_FOLDERS: -name .autodoc -o -name .cache -o -name .common -o -name .config -o -name .git -o -name .github
+    -o -name .gitlab -o -name .husky -o -name .modules -o -name .npm -o -name .pnpm-store -o -name .shared
+    -o -name .task -o -name .venv -o -name .vscode -o -name node_modules -o -name venv -o -path './.common*'
   NPM_PROGRAM: npm
   NPX_HANDLE: ''
   NPX_PACKAGE: npx
