--- a/common/Taskfile.yml.handlebars
+++ b/common/Taskfile.yml.handlebars
@@ -14,7 +14,8 @@ vars:
   GITHUB_USER: ProfessorManhattan
   IGNORE_FOLDERS: -name .autodoc -o -name .cache -o -name .common -o -name .config -o -name .git -o -name .github
     -o -name .gitlab -o -name .husky -o -name .modules -o -name .npm -o -name .pnpm-store -o -name .shared
-    -o -name .task -o -name .venv -o -name .vscode -o -name node_modules -o -name venv -o -path './.common*'
+    -o -name .task -o -name .venv -o -name .vscode -o -name build -o -name dist -o -name node_modules -o -name venv
+    -o -path './.common*' -o -name pnpm-lock.yaml
   NPM_PROGRAM: npm
   NPX_HANDLE: ''
   NPX_PACKAGE: npx
