--- a/common/Taskfile.yml.handlebars
+++ b/common/Taskfile.yml.handlebars
@@ -4,6 +4,7 @@ version: '3'
 output: interleaved
 
 vars:
+  DOCKERHUB_PROFILE: megabytelabs
 {{#eq group 'ansible'}}{{#eq subgroup 'role'}}  GALAXY_NAMESPACE:
     sh: if [ -f meta/main.yml ]; then yq e '.galaxy_info.namespace' meta/main.yml; else jq -r '.name' package.json | sed 's/\/.*//' | sed 's/@//'; fi
   GALAXY_ROLE_NAME:
