--- a/common/Taskfile.yml.handlebars
+++ b/common/Taskfile.yml.handlebars
@@ -42,9 +42,9 @@ tasks:
     cmds:
       - |
         if [ -n "$GITLAB_CI" ]; then
-          if [ -n "$UPDATE_INIT_SCRIPT" ]; then curl -s "$UPDATE_INIT_SCRIPT" | bash; fi
+          if [ -n "$UPDATE_INIT_SCRIPT" ]; then SKIP_INIT=true curl -s "$UPDATE_INIT_SCRIPT" | bash; fi
         else
-          if [ -z "$SKIP_INIT" ]; then curl -s '{{{{}}.INIT_SCRIPT{{}}}}' | bash; fi
+          if [ -z "$SKIP_INIT" ]; then SKIP_INIT=true curl -s '{{{{}}.INIT_SCRIPT{{}}}}' | bash; fi
         fi
       - task: boilerplate:check:package
       - task start
