--- a/common/Taskfile.yml.handlebars
+++ b/common/Taskfile.yml.handlebars
@@ -20,7 +20,7 @@ vars:
   NPM_KEEP_UPDATED: '@installdoc/* @mblabs/* @washingtondc/ping cz-conventional-changelog'
   NPM_PROGRAM: npm
   NPM_PROGRAM_LOCAL:
-    sh: if [ -n "$GITLAB_CI" ]; then echo "pnpm"; else echo "npm"; fi
+    sh: if [ -z "$GITLAB_CI" ]; then echo "pnpm"; else echo "npm"; fi
   NPX_HANDLE: ''
   NPX_PACKAGE: npx
   REPOSITORY_SUBTYPE: {{subgroup}}
@@ -46,7 +46,7 @@ tasks:
         if [ -n "$GITLAB_CI" ]; then
           if [ -n "$UPDATE_INIT_SCRIPT" ]; then curl -s "$UPDATE_INIT_SCRIPT" | bash; fi
         else
-          bash <(curl -s '{{ "{{" }}.INIT_SCRIPT{{ "}}" }}')
+          bash <(curl -s \{{.INIT_SCRIPT}})
         fi
 
   prepare:
