--- a/common/Taskfile.yml.handlebars
+++ b/common/Taskfile.yml.handlebars
@@ -20,8 +20,8 @@ vars:
   NPM_KEEP_UPDATED: '@washingtondc/* parunner'
   NPM_PROGRAM: npm
   NPM_PROGRAM_LOCAL: pnpm
-  NPX_HANDLE: ''
-  NPX_PACKAGE: npx
+  NPX_HANDLE: 'pnpx '
+  NPX_PACKAGE: pnpx
   REPOSITORY_SUBTYPE: {{subgroup}}
   REPOSITORY_TYPE: {{group}}
   TIMEZONE: America/New_York
