--- a/common/package.json.liquid
+++ b/common/package.json.liquid
@@ -33,7 +33,7 @@
     "@washingtondc/prettier": "^1.0.0",
     "@washingtondc/release": "^0.0.2",
     "eslint-config-strict-mode": "^1.0.0",
-    "parunner": "^0.0.1"
+    "sleekfast": "^0.0.1"
   },
   "engines": {
     "node": ">=14.18.0"
