--- a/common/package.json.liquid
+++ b/common/package.json.liquid
@@ -24,9 +24,7 @@
       "path": "node_modules/cz-emoji-conventional"
     }
   },
-  "dependencies": {
-    "tslib": "^2.3.1"
-  },
+  "dependencies": {},
   "description": "{{description}}",
   "devDependencies": {
     "@washingtondc/development": "^1.0.2",
