--- a/common/package.json.liquid
+++ b/common/package.json.liquid
@@ -53,13 +53,7 @@
   "keywords": ["mblabs", "megabytelabs", "professormanhattan", "washingtondc"],
   "license": "{{license}}",
   "lint-staged": {
-    "**/*": [
-      "blocklint --wordlist blacklist,slave,whitelist",
-      "check-merge-conflict",
-      "check-added-large-files",
-      "check-symlinks",
-      "destroyed-symlinks"
-    ],
+    "**/*": ["task lint:any --"],
     "**/*.(css|html|less|md|mjml|php|scss|sh|xml)": ["task fix:prettier --"],
     "**/*.(jpg|png)": ["task image:compress --"],
     "**/*.(js|jsx|ts|tsx)": ["task fix:js --", "task lint:js --"],
