--- a/common/Taskfile.yml.liquid
+++ b/common/Taskfile.yml.liquid
@@ -25,7 +25,7 @@ vars:
   NPX_HANDLE: 'pnpx '
   NPX_PACKAGE: pnpx
   PYTHON_HANDLE:
-    sh: if [ -z "$GITLAB_CI" ] echo 'poetry run '; else echo ''; fi
+    sh: if [ -z "$GITLAB_CI" ]; then echo 'poetry run '; fi
   REPOSITORY_SUBTYPE: {{subgroup}}
   REPOSITORY_TYPE: {{group}}
   TIMEZONE: America/New_York
