Update common/Taskfile.yml.liquid, common/.config/taskfiles/install/Taskfile.yml, common/.config/taskfiles/install/Taskfile-python.yml, common/.config/taskfiles/install/Taskfile-software.yml

--- a/common/Taskfile.yml.liquid
+++ b/common/Taskfile.yml.liquid
@@ -54,6 +54,17 @@ tasks:
           bash <(curl -s \{{.INIT_SCRIPT}})
         fi
 
+  preload:
+    deps:
+      - install:brewfile
+    desc: Set up your workstation in advance by installing commonly used programs
+    cmds:
+      - |
+        task install:modules:global &
+        task install:pipx:global &
+        wait
+        .config/log success 'Successfully preloaded commonly used system applications'
+
   prepare:
     desc: Prepares the project for the normal start command
     cmds:
