--- a/common/Taskfile.yml.liquid
+++ b/common/Taskfile.yml.liquid
@@ -59,7 +59,7 @@ tasks:
       - install:brewfile
     desc: Set up your workstation in advance by installing commonly used programs
     summary: |
-      # Speed up future development by preloading system applications
+      # Speed up future development by preloading common system applications
 
       Just about every development task requires some sort of globally installed
       application. TypeScript requires Node.js to be installed. Ansible requires
