--- a/common/Taskfile.yml.liquid
+++ b/common/Taskfile.yml.liquid
@@ -69,8 +69,12 @@ tasks:
       environments whenever possible (i.e. {{.NPX_PACKAGE}} in the case of Node.js,
       poetry in the case of Python, etc.).
 
+      ## Reboot Requirements
+
       Some software that is installed, like VirtualBox and Docker, require reboots so
       it is recommended that you reboot after running this task.
+
+      ## Passwordless Installation
 
       This installation method and all the methods we use will only prompt for a sudo
       password when absolutely necessary. If you already have common development tools
