--- a/common/Taskfile.yml.liquid
+++ b/common/Taskfile.yml.liquid
@@ -40,11 +40,40 @@ tasks:
 
   group:exec:
     desc: Execute group commands on any group (including repositories in sub-groups)
+    summary: |
+      # Run commands on multiple repositories in parallel
+
+      This command requires that the `GITLAB_TOKEN` environment variable be set. With the
+      token defined, you can use this task to run scripts on repositories that fall under
+      any given group or sub-group. By default, it runs the script(s) on all the
+      repositories in the specified group and sub-groups.
+
+      You can use this task to perform adhoc bulk changes to large numbers of
+      repositories that are hosted on GitLab.
+
+      **Example usage:**
+      `task group:exec -- group/subgroup ---- 'bash <(curl https://myscript.com)'
+
+      In the example above, the bash command will be run in the root of each repository.
     cmds:
       - task: git:gitlab:group:exec
 
   init:
     desc: Ensures project is initialized with upstream files and migrates pre-existing projects
+    summary: |
+      # Initialize the project and run the full update sequence
+
+      This command will mostly not be needed for pre-existing projects. This task begins
+      by calling a script that:
+
+      1. Migrates legacy projects
+      2. Fixes common errors
+      3. Ensures the project is initialized
+      4. Prompts for missing metadata
+      5. Runs the `start` task
+
+      If you are facing difficulties, you can try running this task to reset the project,
+      perform common fixes, and run the whole start up routine.
     cmds:
       - git init
       - |
@@ -93,6 +122,13 @@ tasks:
 
   prepare:
     desc: Prepares the project for the normal start command
+    summary: |
+      # Prepare the project
+
+      This task ensures the project has all the required metadata. If a project
+      is missing required metadata then this task will interactively prompt the user
+      for the missing data. It also performs miscellaneous tasks that are sometimes
+      required by the `start` task.
     cmds:
       - task: boilerplate:check:package
       - task: boilerplate:clean
@@ -102,6 +138,13 @@ tasks:
     deps:
       - install:npm:ntl
     desc: Run and view descriptions for `npm scripts` via an interactive dialog
+    summary: |
+      # Interactively select scripts defined in package.json
+
+      Our projects use `run` (a fork of task) to handle most of the task running.
+      However, in some projects there may be scripts defined in package.json. This
+      task is a convienience method that will present a list of scripts alongside
+      their descriptions that you can interactively launch.
     cmds:
       - NTL_RUNNER=\{{.NPM_PROGRAM}} \{{.NPX_HANDLE}}ntl
 
@@ -111,18 +154,22 @@ tasks:
       # Update elements of the repository that require API access
 
       This task will ensure that the git repositories and other services related to the
-      project are updated with the proper configurations. Requires that certain
-      API keys be set.
+      project are updated with the proper configurations. It requires that certain
+      API keys be set. Generally, only project owners will use this task.
     cmds:
       - task: common:update:services
 
   start:
     desc: Set up the project and refresh it with the latest changes
     summary: |
-      # Set up the project
+      # Start the project
 
       This task will scaffold the project with the latest upstream changes
       and ensure your development environment has all the dependencies installed.
+
+      This command should be used whenever the files that are automatically generated
+      need to be updated. It also serves as an entry point for new developers who
+      are getting started with the project.
 
       **Example usage:**
       `task start`
@@ -132,6 +179,17 @@ tasks:
   test:
     interactive: true
     desc: Open an interactive dialog to select and run a Molecule test
+    summary: |
+      # Test Ansible plays
+
+      This task wraps all the supported test methods for Ansible plays into a
+      convienient multi-question prompt system that supports:
+
+      1. Docker tests
+      2. Headless VirtualBox tests
+      3. VirtualBox Desktop tests which are not automatically destroyed
+      4. Running the play locally
+      5. Running the play over SSH on a remote target
     cmds:
       - task: ansible:test:prompt
 {{/eq}}
