--- a/common/package.json.liquid
+++ b/common/package.json.liquid
@@ -55,7 +55,7 @@
   "lint-staged": {
     "**/*": ["task lint:any --"],
     "**/*.(css|html|less|md|mjml|php|scss|sh|xml)": ["task fix:prettier --"],
-    "**/*.(jpg|png)": ["task image:compress --"],
+    "**/!(logo).(jpg|png)": ["task image:compress --"],
     "**/*.(js|jsx|ts|tsx)": ["task fix:js --", "task lint:js --"],
     "**/*.json": ["task fix:json --"],
     "**/*.sh": ["task lint:shell --"],
