--- a/common/Taskfile.yml.liquid
+++ b/common/Taskfile.yml.liquid
@@ -33,6 +33,9 @@ vars:
   TIMEZONE: America/New_York
 
 includes:
+  project:
+    taskfile: Taskfile-project.yml
+    optional: true
 {{#each (taskfileSort (glob './.config/taskfiles/**/*.yml'))}}
   {{remove (remove (remove (replace (remove this "./.config/taskfiles/") "/Taskfile-" ":") "/Taskfile.yml") "Taskfile-") ".yml"}}: {{this}}
 {{/each}}
@@ -158,6 +161,46 @@ tasks:
       `task lint`
     cmds:
       - task: lint:all
+
+  livereload:
+    deps:
+      - install:npm:nodemon
+    desc: Start the project with live-reloading (i.e. watch mode)
+    log:
+      start: Starting `nodemon` live-reload session
+    summary: |
+      # LiveReload the project
+
+      Using LiveReload, you can automatically run the project any time you make
+      changes to the project. The LiveReload feature uses [nodemon](https://github.com/remy/nodemon)
+      with the configuration stored in `.config/nodemon.json`.
+
+      Whenever you make a change to the project, `task project:livereload` will run. You can
+      define the command that runs everytime you make a change in the `Taskfile-project.yml`
+      `livereload` section. This file is kept intact even across upstream propagation updates,
+      unlike the regular `Taskfile.yml`.
+
+      **Example usage:**
+      `task livereload`
+
+      The default configuration (in `.config/nodemon.json`) is generic and makes assumptions
+      about the file types to watch based on what type project it is. If you would like to
+      use a different configuration, you can pass in the location of the configuration like so:
+
+      **Example with custom configuration:**
+      `task livereload -- nodemon.custom.json`
+
+      The task program also provides a `--watch` feature. However, it relies on the `sources` attribute
+      being defined so it might not work in all cases.
+
+      **Example using `task --watch`:**
+      `task --watch mytask`
+    cmds:
+      - |
+        if [ ! -f Taskfile-project.yml ]; then
+          .config/log error '`Taskfile-project.yml` must exist and have a `livereload` task to use with `nodemon`' && exit 1
+        fi
+      - nodemon --config {{if .CLI_ARGS}}{{.CLI_ARGS}}{{else}}.config/nodemon.json{{end}}
 
 {{#eq group 'ansible'}}{{#eq subgroup 'playbook'}}
   playbook:
