--- a/common/package.json.liquid
+++ b/common/package.json.liquid
@@ -80,7 +80,11 @@
     "access": "{{npm_publish_config_access}}"
   },
   "release": {
-    "branches": ["master", "next"],
+    "branches": [
+      "next",
+      { "name": "beta", "prerelease": true },
+      { "name": "alpha", "prerelease": true }
+    ],
     "extends": "@washingtondc/release"
   },
   "repository": {
