--- a/common/pyproject.toml.liquid
+++ b/common/pyproject.toml.liquid
@@ -8,7 +8,7 @@ readme = "README.md"
 homepage = "{{link.home}}"
 documentation = "{{docs.link}}"
 keywords = [{{{poetryKeywords}}}]
-include = {{{poetryIncludes}}}
+include = ["docs/CHANGELOG.md", "LICENSE"]
 classifiers = [
   "Development Status :: 4 - Beta",
   "Development Status :: 5 - Production/Stable",
