--- a/common/package.json.liquid
+++ b/common/package.json.liquid
@@ -81,6 +81,8 @@
   },
   "release": {
     "branches": [
+      "main",
+      "master",
       "next",
       { "name": "beta", "prerelease": true },
       { "name": "alpha", "prerelease": true }
