--- a/common/package.json.liquid
+++ b/common/package.json.liquid
@@ -29,9 +29,8 @@
   "devDependencies": {
     "@washingtondc/development": "^1.0.2",
     "@washingtondc/prettier": "^1.0.0",
-    "@washingtondc/release": "^0.0.2",
     "eslint-config-strict-mode": "^1.0.0",
-    "sleekfast": "^0.0.1"
+    "semantic-release-config": "^0.0.2"
   },
   "engines": {
     "node": ">=14.18.0"
@@ -86,7 +85,7 @@
       { "name": "beta", "prerelease": true },
       { "name": "alpha", "prerelease": true }
     ],
-    "extends": "@washingtondc/release"
+    "extends": "semantic-release-config"
   },
   "repository": {
     "type": "git",
