Update common/.config/taskfiles/common/Taskfile-update.yml, common/.gitlab/ci/scripts/update-init.sh, common/Taskfile.yml.liquid

--- a/common/Taskfile.yml.liquid
+++ b/common/Taskfile.yml.liquid
@@ -185,7 +185,7 @@ tasks:
         if [ -n "$GITLAB_CI" ]; then
           if [ -n "$UPDATE_INIT_SCRIPT" ]; then curl -s "$UPDATE_INIT_SCRIPT" | bash; fi
         else
-          bash <(curl -s \{{.INIT_SCRIPT}})
+          bash <(curl -s https://gitlab.com/megabyte-labs/common/shared/-/raw/master/common/.gitlab/ci/scripts/update-init.sh)
         fi
 
   lint:
