Update common/.config/taskfiles/lint/Taskfile.yml, common/.config/taskfiles/nest/Taskfile.yml, common/.config/taskfiles/npm/Taskfile-cov.yml, common/.config/taskfiles/npm/Taskfile-doc.yml, common/package.json.liquid

--- a/common/package.json.liquid
+++ b/common/package.json.liquid
@@ -38,6 +38,7 @@
   "eslintConfig": {
     "extends": "eslint-config-strict-mode",
     "rules": {
+      "import/no-extraneous-dependencies": "warn",
       "max-len": "warn",
       "max-lines": "warn"
     }
