Update common/.gitlab/ci/publish/semantic-release.gitlab-ci.yml, common/.gitlab/ci/update/project.gitlab-ci.yml, common/.gitlab/ci/update/common.gitlab-ci.yml, common/package.json.liquid

--- a/common/package.json.liquid
+++ b/common/package.json.liquid
@@ -86,6 +86,7 @@
   "release": {
     "branches": [
       "main",
+      "master",
       "next",
       { "name": "beta", "prerelease": true },
       { "name": "alpha", "prerelease": true }
