--- a/common/package.json.liquid
+++ b/common/package.json.liquid
@@ -31,7 +31,9 @@
   "dependencies": {},
   "description": "{{description}}",
   "devDependencies": {
-    "@washingtondc/development": "^1.0.2",
+    "@commitlint/config-conventional": "^16.0.0",
+    "@washingtondc/development": "^1.0.0",
+    "cz-emoji-conventional": "^1.0.1",
     "eslint-config-strict-mode": "^1.0.28",
     "prettier-config-sexy-mode": "^1.0.0",
     "semantic-release-config": "^0.0.12"
