--- a/common/package.json.liquid
+++ b/common/package.json.liquid
@@ -32,12 +32,12 @@
   "description": "{{description}}",
   "devDependencies": {
     "@commitlint/config-conventional": "^16.0.0",
-    "@washingtondc/development": "^1.0.0",
+    "@washingtondc/development": "latest",
     "cz-emoji-conventional": "^1.0.1",
-    "eslint-config-strict-mode": "^1.0.28",
+    "eslint-config-strict-mode": "latest",
     "handlebars-helpers": "^0.10.0",
-    "prettier-config-sexy-mode": "^1.0.0",
-    "semantic-release-config": "^0.0.16"
+    "prettier-config-sexy-mode": "latest",
+    "semantic-release-config": "latest"
   },
   "engines": {
     "node": ">=14.18.0"
